[gd_scene load_steps=5 format=2]

[ext_resource path="res://players + enemies art/1/Walk.png" type="Texture" id=1]
[ext_resource path="res://Entity/Player.gd" type="Script" id=2]
[ext_resource path="res://PlayerMovementData.tres" type="Resource" id=3]

[sub_resource type="CapsuleShape2D" id=1]
height = 16.0

[node name="Player" type="KinematicBody2D" groups=["checkpointer", "climber"]]
collision_mask = 6
script = ExtResource( 2 )
MovementData = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -10, 9 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 6

[node name="Hurtbox" type="Area2D" parent="."]
collision_mask = 6
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hurtbox"]
polygon = PoolVector2Array( -20, 24, -15, 24, -12, 14, -10, 14, -7, 24, -1, 24, -5, 12, -5, 7, -5, 4, -7, 1, -8, -4, -13, -4, -13, 1, -16, 3, -16, 12, -17, 15 )

[node name="BounceJump" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="CoyoteJump" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]
[connection signal="timeout" from="BounceJump" to="." method="_on_BounceJump_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
